--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -8,7 +8,8 @@ theme : beige
 theme-override : assets/css/PITCHME.css
 # theme-override : assets/css/PITCHME.codemax.css
 highlight : hybrid
-logo : assets/image/logo.png
+# logo : assets/image/logo.png
+logo: assets/image/NCE.jpg
 transition : none
 published : true
-footnote : "GitPitch [ Aqua ] Presentation Template"
+footnote : "Oficina: ESP32 e Protocolo I2C"
